[package]
name = "mc-xian-web-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
servo = { git = "https://github.com/servo/servo", package = "libservo" }
dpi = "0.1"
gleam = "0.15"
glow = "0.16.0"
surfman = { version = "0.11.0", features = ["chains"] }
url = "2"
rustls = { version = "0.23", default-features = false, features = [
    "aws_lc_rs",
] }

[lib]
name = "xian_web_engine"
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
